--- a/public/pages/configurations.html
+++ b/public/pages/configurations.html
@@ -12,8 +12,8 @@
   <!--     Fonts and icons     -->
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700" />
   <!-- Nucleo Icons -->
-  <link href="../static/styles/nucleo-icons.css" rel="stylesheet" />
-  <link href="../static/styles/nucleo-svg.css" rel="stylesheet" />
+  <link href="../styles/nucleo-icons.css" rel="stylesheet" />
+  <link href="../styles/nucleo-svg.css" rel="stylesheet" />
   <!-- add excel pakage -->
   <script src="https://unpkg.com/xlsx/dist/xlsx.full.min.js"></script>
 
@@ -26,8 +26,8 @@
   <!-- CSS Files -->
   <!-- index.js -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-  <script src="../static/js/bootstrap.min.js"></script>
-  <link id="pagestyle" href="../static/styles/material-dashboard.css?v=3.0.4" rel="stylesheet" />
+  <script src="../js/bootstrap.min.js"></script>
+  <link id="pagestyle" href="../styles/material-dashboard.css?v=3.0.4" rel="stylesheet" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootbox.js/5.5.2/bootbox.min.js"></script>
 
   <style>
@@ -180,7 +180,7 @@
             let maxv = parseFloat(tr.children[3].children[0].value);
             let density = parseFloat(tr.children[4].children[0].value);
             // send data to server
-            fetch('/configurations', {
+            fetch('/configurations/update', {
               method: 'POST',
               headers: {
                 'Content-Type': 'application/json'
@@ -234,8 +234,10 @@
             let tank_data = data.data;
             // get tank table body 
             let table = document.getElementById('tank-table');
-            for(let i = 0; i < tank_data.length; i++){
-              let tank = tank_data[i];
+            tank_data.forEach(tank => {
+              if(tank.tankid){
+                
+              }
               let tr = document.createElement('tr');
               tr.setAttribute('tankid', tank.tankid);
               // tankid
@@ -299,7 +301,7 @@
               td.appendChild(a);
               tr.appendChild(td);
               table.appendChild(tr);
-            }
+            })
         })
 });
   </script>
@@ -448,10 +450,10 @@
   
   <!-- -------- END FOOTER 3 w/ COMPANY DESCRIPTION WITH LINKS & SOCIAL ICONS & COPYRIGHT ------- -->
   <!--   Core JS Files   -->
-  <script src="../static/js/core/bootstrap.min.js" type="text/javascript"></script>
+  <script src="../js/core/bootstrap.min.js" type="text/javascript"></script>
   <!--  Google Maps Plugin    -->
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDTTfWur0PDbZWPr7Pmq8K3jiDp0_xUziI"></script>
-  <!-- <script src="../static/js/material-kit.min.js?v=3.0.4" type="text/javascript"></script> -->
+  <!-- <script src="../js/material-kit.min.js?v=3.0.4" type="text/javascript"></script> -->
   <script>
     if (document.getElementById('typed')) {
       var typed = new Typed("#typed", {
